--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "A workflow for Angular-ES6 made with Webpack",
   "scripts": {
-    "build": "rimraf dist && webpack --bail --progress --profile",
+    "build": "webpack -p",
     "server": "webpack-dev-server --history-api-fallback --inline --progress",
     "test": "karma start",
     "test-watch": "karma start --auto-watch --no-single-run",
@@ -20,7 +20,6 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
-    "autoprefixer": "^6.0.3",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
@@ -44,7 +43,6 @@
     "phantomjs-prebuilt": "^2.1.4",
     "postcss-loader": "1.2.2",
     "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "webpack": "2.2.0",
